--- a/api/package.json
+++ b/api/package.json
@@ -40,6 +40,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "ts-jest": "^28.0.7",
+    "validator": "^13.9.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -58,6 +59,7 @@
     "@types/passport": "^1.0.2",
     "@types/superagent": "^4.1.15",
     "@types/supertest": "^2.0.12",
+    "@types/validator": "^13.7.15",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
