--- a/api/package.json
+++ b/api/package.json
@@ -20,7 +20,8 @@
     "@types/jsonwebtoken": "^8.3.7",
     "@types/lusca": "^1.7.0",
     "@types/mongoose": "^5.11.97",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.36.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
@@ -38,12 +39,16 @@
     "mongodb-memory-server": "^8.8.0",
     "mongoose": "^6.6.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "ts-jest": "^28.0.7",
     "validator": "^13.9.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/errorhandler": "^0.0.32",
@@ -53,6 +58,7 @@
     "@types/jest": "^28.1.6",
     "@types/lodash": "^4.14.149",
     "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.7.5",
     "@types/node-sass": "^4.11.0",
     "@types/nodemailer": "^6.4.0",
