--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,14 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "styled-components": "^5.3.10",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
