Update acount page added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "editor.fontFamily": "'Source Code Pro', Consolas, 'Courier New', monospace"
+    "editor.fontFamily": "'Source Code Pro', Consolas, 'Courier New', monospace",
+    "todo-tree.tree.scanMode": "workspace"
 }
