--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.10",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
