--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "axios": "^1.4.0",
+    "braintree-web-drop-in-react": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
